[gd_scene load_steps=34 format=3 uid="uid://p7hq710g3vrm"]

[ext_resource type="Texture2D" uid="uid://y3vxnx8dkyex" path="res://assets/art/characters/soccer-player.png" id="1_rp718"]
[ext_resource type="Script" uid="uid://fgmhxntynykg" path="res://scenes/characters/player.gd" id="1_yewv4"]
[ext_resource type="Shader" uid="uid://b2rd3b236j2l0" path="res://shaders/team_handler.gdshader" id="2_kqtwu"]
[ext_resource type="Texture2D" uid="uid://c3gpuumcxa62a" path="res://assets/art/palettes/skin-colors-palette.png" id="3_6eyoc"]
[ext_resource type="Texture2D" uid="uid://dv5dkimb607mu" path="res://assets/art/characters/player-shadow.png" id="3_76oj4"]
[ext_resource type="Texture2D" uid="uid://d0a33be15gp1c" path="res://assets/art/palettes/teams-color-palette.png" id="4_eojnx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76oj4"]
resource_local_to_scene = true
shader = ExtResource("2_kqtwu")
shader_parameter/skin_palette = ExtResource("3_6eyoc")
shader_parameter/team_palette = ExtResource("4_eojnx")
shader_parameter/skin_color = 0
shader_parameter/team_color = 0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rp718"]
radius = 4.0
height = 18.0

[sub_resource type="Animation" id="Animation_eojnx"]
resource_name = "BicycleKick"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_complete"
}]
}

[sub_resource type="Animation" id="Animation_g66nw"]
resource_name = "Celebrate"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 18, 24]
}

[sub_resource type="Animation" id="Animation_2l4js"]
resource_name = "ChestControl"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}

[sub_resource type="Animation" id="Animation_k4v7y"]
resource_name = "DiveDown"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [72]
}

[sub_resource type="Animation" id="Animation_xrqxk"]
resource_name = "DiveUp"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [66]
}

[sub_resource type="Animation" id="Animation_7vyk4"]
resource_name = "Header"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_xhtjm"]
resource_name = "Hurt"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [54, 55]
}

[sub_resource type="Animation" id="Animation_rp718"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_6eyoc"]
resource_name = "Kick"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [49, 50, 51]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_complete"
}]
}

[sub_resource type="Animation" id="Animation_rpnd8"]
resource_name = "Mourn"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_kqtwu"]
resource_name = "PrepKick"
length = 0.1
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="Animation" id="Animation_76oj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_atpat"]
resource_name = "Recover"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_yewv4"]
resource_name = "Run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_dyp2m"]
resource_name = "Tackle"
length = 0.1
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_qgnko"]
resource_name = "VolleyKick"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [49, 50]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_complete"
}]
}

[sub_resource type="Animation" id="Animation_jk2m4"]
resource_name = "Walk"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dyp2m"]
_data = {
&"BicycleKick": SubResource("Animation_eojnx"),
&"Celebrate": SubResource("Animation_g66nw"),
&"ChestControl": SubResource("Animation_2l4js"),
&"DiveDown": SubResource("Animation_k4v7y"),
&"DiveUp": SubResource("Animation_xrqxk"),
&"Header": SubResource("Animation_7vyk4"),
&"Hurt": SubResource("Animation_xhtjm"),
&"Idle": SubResource("Animation_rp718"),
&"Kick": SubResource("Animation_6eyoc"),
&"Mourn": SubResource("Animation_rpnd8"),
&"PrepKick": SubResource("Animation_kqtwu"),
&"RESET": SubResource("Animation_76oj4"),
&"Recover": SubResource("Animation_atpat"),
&"Run": SubResource("Animation_yewv4"),
&"Tackle": SubResource("Animation_dyp2m"),
&"VolleyKick": SubResource("Animation_qgnko"),
&"Walk": SubResource("Animation_jk2m4")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_76oj4"]
radius = 7.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqtwu"]
size = Vector2(14, 11)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kqtwu"]
radius = 40.0
height = 120.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6eyoc"]
size = Vector2(300, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eojnx"]
size = Vector2(7, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6eyoc"]
radius = 6.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eojnx"]
radius = 4.0
height = 28.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_yewv4")
power = 150.0
metadata/_edit_horizontal_guides_ = [-22.0]
metadata/_edit_vertical_guides_ = [-192.0, -197.0]

[node name="CharacterSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_76oj4")
texture = ExtResource("1_rp718")
centered = false
offset = Vector2(-16, -32)
hframes = 6
vframes = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rp718")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_dyp2m")
}
autoplay = "Idle"

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_76oj4")
centered = false
offset = Vector2(-8, -15)

[node name="ControlSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -35)
centered = false
offset = Vector2(-7, -6)

[node name="BallDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDetectionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_76oj4")

[node name="TackleDamageEmitter" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TackleDamageEmitter"]
position = Vector2(10, -4.5)
shape = SubResource("RectangleShape2D_kqtwu")

[node name="OpponentDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpponentDetectionArea"]
position = Vector2(20, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kqtwu")

[node name="TeammateDetectionRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(300, 0)
collision_mask = 2

[node name="TeammateDetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeammateDetectionArea"]
position = Vector2(150, 0)
shape = SubResource("RectangleShape2D_6eyoc")

[node name="PermanentDamageEmitterArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PermanentDamageEmitterArea"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_eojnx")

[node name="GoalieHands" type="AnimatableBody2D" parent="."]
collision_layer = 32
collision_mask = 0
sync_to_physics = false

[node name="GoalieHandsCollider" type="CollisionShape2D" parent="GoalieHands"]
unique_name_in_owner = true
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_6eyoc")

[node name="BallCarryArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallCarryArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_eojnx")
